--- a/style/footer.css
+++ b/style/footer.css
@@ -3,6 +3,7 @@ footer {
         list-style: none;
     }
     .icons-2 {
+        padding: 0;
         display: flex;
         justify-content: center;
         align-items: center;
