--- a/style/style.css
+++ b/style/style.css
@@ -38,9 +38,11 @@ header {
     flex-direction: column;
     gap: 10px;
     margin-top: 20px;
-    background-image: linear-gradient(to bottom, #2f00aebb, #192bf500);
-    padding: 10px;
     border-radius: 5px;
+    .Info {
+        padding: 10px;
+        background-image: linear-gradient(to bottom, #2f00aebb, #192bf500);
+    }
     h2 {
         background-image: linear-gradient(to right, #11bdf1, #f519ac);
         -webkit-background-clip: text;
@@ -58,9 +60,43 @@ header {
         display: flex;
         flex-direction: column;
         gap: 10px;
-        p {
-            font-size: 1.8rem;
-            color: rgba(255, 255, 255, 0.7);
+        h3 {
+            background-image: linear-gradient(to right, #11bdf1, #f519ac);
+            -webkit-background-clip: text;
+            color: transparent;
+            background-clip: text;
+            font-size: 2.4rem;
+            font-weight: 700;
+            text-shadow: 0px 0px 24px rgba(139, 200, 244, 0.195);
+        }
+        .steps {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 10px;
+            width: 100%;
+            div {
+                transform: rotate3d(2, -1, -1, -0.01turn);
+                transition: all 0.3s ease-in-out;
+                padding: 10px;
+                background-image: linear-gradient(to right, #11bdf1, #f519ac);
+                border-radius: 5px;
+                p {
+                    font-size: 1.8rem;
+                    color: rgba(255, 255, 255, 0.7);
+                }
+                span {
+                    font-size: 2.8rem;
+                    color: rgba(255, 255, 255, 0.7);
+                    text-shadow: 0px 0px 4px rgba(17, 0, 255, 0.794);
+                }
+            }
+            div:hover {
+                box-shadow: 0px 0px 10px 5px rgba(107, 174, 255, 0.476);
+                transform: rotate3d(1, -1, -1, 0deg);
+
+                transition: all 0.3s ease-in-out;
+                cursor: help;
+            }
         }
     }
 }
@@ -119,7 +155,7 @@ header {
             input:hover {
                 box-shadow: 0 0 15px 0.2em rgba(199, 139, 244, 0.5), 0 0 30px rgba(183, 139, 244, 0.5),
                     0 0 45px rgba(150, 50, 102, 0.5);
-                transform: scale(1.1) rotate(2deg);
+                transform: scale(1.05);
                 transition: all 0.3s ease-in-out;
             }
         }
